--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,22 @@ body {
 	color: var(--textColor);
 	font-family: "IBM Plex Sans", sans-serif;
 }
+
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: var(--primary2);
+	border-radius: 30px;
+}
+
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0px 5px grey;
+	border-radius: 10px;
+}
+
+::selection {
+	color: white;
+	background: var(--primary1);
+}
