--- a/src/pages/Guidlines/Guidlines.css
+++ b/src/pages/Guidlines/Guidlines.css
@@ -14,6 +14,18 @@
 .guidlines li {
 	margin-bottom: 1rem;
 }
+
+.guidlinesButton {
+	background: var(--primary2);
+	padding: 0.75rem 1rem;
+	color: var(--textColor);
+	font-size: 1.2rem;
+	font-weight: 500;
+	border-radius: 15px;
+	cursor: pointer;
+	border: none;
+	outline: none;
+}
 @media only screen and (max-width: 1240px) {
 	.guidlines {
 		padding: 2rem;
