--- a/src/pages/SubjectsPage/Subjects.css
+++ b/src/pages/SubjectsPage/Subjects.css
@@ -51,11 +51,27 @@
 	padding: 0.75rem 1.2rem;
 	color: var(--textColor);
 	font-size: 1rem;
-	font-weight: 500;
+	font-weight: 800;
 	border-radius: 15px;
 	cursor: pointer;
 	border: none;
 	outline: none;
+}
+
+.subjectButtons{
+	display: flex;
+	gap: 1rem;
+	flex-wrap: wrap;
+}
+.ClearSubjects{
+		background: var(--background);
+			padding: 0.75rem 1.2rem;
+			color: var(--primary2);
+			font-size: 1rem;
+			font-weight: 600;
+			border-radius: 15px;
+			cursor: pointer;
+			border: 2px solid var(--primary2);
 }
 @media only screen and (max-width: 1240px) {
 	.SubjectsPage {
